--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "next": "14.2.35",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "zod": "^3.23.0"
   },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
@@ -40,6 +44,7 @@
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.0"
+  },
   "engines": {
     "node": ">=20.0.0"
   }
