--- a/functions/package.json
+++ b/functions/package.json
@@ -16,17 +16,18 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
-    "genkit": "^1.26.0",
-    "@genkit-ai/vertexai": "^1.26.0",
     "@genkit-ai/firebase": "^1.26.0",
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.0.0",
-    "zod": "^3.23.0",
-    "@opentelemetry/sdk-node": "^0.52.0",
+    "@genkit-ai/vertexai": "^1.26.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.52.0",
     "@opentelemetry/resources": "^1.25.0",
+    "@opentelemetry/sdk-node": "^0.52.0",
+    "@opentelemetry/sdk-trace-base": "^1.25.0",
     "@opentelemetry/semantic-conventions": "^1.25.0",
-    "@opentelemetry/sdk-trace-base": "^1.25.0"
+    "@sentry/node": "^10.32.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^5.0.0",
+    "genkit": "^1.26.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
