--- a/functions/package.json
+++ b/functions/package.json
@@ -27,6 +27,7 @@
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
     "genkit": "^1.26.0",
+    "google-auth-library": "^9.15.1",
     "zod": "^3.23.0"
   },
   "devDependencies": {
